--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
               Email:
               <ul>
                 <li>rohit15sarkar[AT]yahoo[DOT]com</li>
+                <li>rohit[DOT]sarkar[AT]icts[DOT]res[DOT]in</li>
+                <li>rohitsarmasarkar95[AT]iitkgp[DOT]ac[DOT]in</li>
               </ul>
               
             </p>
