--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 
             <p>
-              Hi, I'm Rohit and I am currently a postdoctoral researcher at the International Centre for Theoretical Sciences (ICTS-TIFR), Bengaluru, India. I completed my PhD as a Prime Minister's Research Fellow (PMRF) under the supervision of Dr. Bodhayan Roy, from the Department of Mathematics, Indian Institute of Technology Kharagpur. My research interest lie in the area of quantum computing, quantum circuits, quantum information, linear algebra and quantum walks. My thesis is titled Scalable quantum circuit representation of unitary 
-              matrices. Here is my <a href="CVDECRohit.pdf">CV</a>.
+              Hi, I'm Rohit and I am currently a postdoctoral researcher at the International Centre for Theoretical Sciences (ICTS-TIFR), Bengaluru, India. I completed my PhD as a Prime Minister's Research Fellow (PMRF) under the supervision of Dr. Bodhayan Roy, from the Department of Mathematics, Indian Institute of Technology Kharagpur. My research interest lie in the area of quantum computing, quantum circuits, quantum information, linear algebra and quantum walks. My thesis is titled <b> <a href="http://www.idr.iitkgp.ac.in/xmlui/handle/123456789/15724/" target="_blank">Scalable Quantum Circuit Representation of Unitary 
+              MatricesCV </a></b>. Here is my <a href="CVDECRohit.pdf">CV</a>.
             </p>
             
           </div>
